Update portfolio website with background image, centered resume section, and simplified contact form
- Replace blue overlay with tech-projects-bg.jpg background image
- Reduce portfolio items to 3 squares in My Work section
- Update YouTube portfolio item to use Yahoo.webp image
- Remove Key Highlights section from resume
- Center resume section with full viewport height
- Remove contact form, keep only LinkedIn, YouTube, and email links
- Center contact information layout

--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "A luxury-inspired portfolio website combining Rolex and Apple aesthetics with smooth animations",
   "main": "index.html",
   "scripts": {
-    "start": "python3 -m http.server 8000",
-    "dev": "python3 -m http.server 8000",
+    "start": "./launch.sh",
+    "dev": "./launch.sh",
     "build": "echo 'No build process needed for static site'",
-    "serve": "python3 -m http.server 8000"
+    "serve": "./launch.sh",
+    "run": "./launch.sh",
+    "open": "open http://localhost:8080",
+    "windows": "launch.bat"
   },
   "keywords": [
     "portfolio",
